Minor fix release, target version 4.4.5
Fix InvocationSensor memory leaks and improve proxy generation

- Replace static proxy cache with ClassValue to prevent class loader
leaks
  and ensure consistent proxy creation under concurrent access
- Reset selector tracking state defensively to avoid stale properties
after
  failed selector evaluations
- Replace JDK-internal proxy injection with
MethodHandles.privateLookupIn()
  and ClassLoadingStrategy.UsingLookup
- Remove the need for --add-opens java.base/java.lang=ALL-UNNAMED
- Add regression tests for class loader cleanup, stale tracking state,
and
  proxy generation compatibility

All tests pass without additional JVM flags.